// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SnitchDialog matches snapshot 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        aria-modal="true"
        class="bp6-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-0"
          >
            Be snitchin
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="m9.41 8 2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        />
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button bp6-intent-primary"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="m14.7 7.29-5-5a.97.97 0 0 0-.71-.3 1.003 1.003 0 0 0-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 0 0 1.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`SnitchDialog matches snapshot with history 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        aria-modal="true"
        class="bp6-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-1"
          >
            Be snitchin
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="m9.41 8 2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        />
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button bp6-minimal left-align-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                History
              </span>
            </button>
            <button
              class="bp6-button bp6-intent-primary"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="m14.7 7.29-5-5a.97.97 0 0 0-.71-.3 1.003 1.003 0 0 0-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 0 0 1.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
